--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -3,15 +3,22 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev":"ts-node-dev --respawn  src/index.ts",
-    "build":"tsc",
+    "dev": "ts-node-dev --respawn  src/index.ts",
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "experss": "^0.0.1-security",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "prisma": "^6.8.2"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.18",
     "@types/express": "^5.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
