--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -9,17 +9,27 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@prisma/client": "^6.8.2",
+    "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "experss": "^0.0.1-security",
     "express": "^5.1.0",
-    "prisma": "^6.8.2"
+    "express-rate-limit": "^7.5.0",
+    "ioredis": "^5.6.1",
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^6.8.2",
+    "rate-limiter-flexible": "^7.1.1",
+    "redis": "^5.1.0",
+    "zod": "^3.25.28"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.1",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^22.15.21",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
